Atualização no site

--- a/sabores-v50.html
+++ b/sabores-v50.html
@@ -126,31 +126,8 @@
 </head>
 <body>
   
-  <h1> Sabores disponíveis por produto</h1>
+  <h1> Clique no seu sabor favorito e receba rapidinho!</h1>
   
-  <div class="menu">
-  <a href="#blacksheep20k">BLACK SHEEP 20K</a>
-  <a href="#blacksheeprefil">BLACK SHEEP REFIL 30K</a>
-  <a href="#chris">CHRIS BROWN 15K</a>
-  <a href="#iceking">ELFBAR ICE KING 40K</a>
-  <a href="#elfbar">ELFBAR TE 30K</a>
-  <a href="#v80">IGNITE V80 BLACK</a>
-  <a href="#ignitep100">IGNITE P100</a>
-  <a href="#v120">IGNITE V120</a>
-  <a href="#v120gold">IGNITE V120 GOLD</a>
-  <a href="#v150">IGNITE V150 PRO</a>
-  <a href="#v250">IGNITE V250</a>
-  <a href="#v300">IGNITE V300</a>
-   <a href="#v400">IGNITE V400</a>
-  <a href="#refilignite10k">REFIL IGNITE 10K</a>
-  <a href="#losty">LOSTY ANGEL 20K</a>
-  <a href="#refiloxbar">REFIL OXBAR</a>
-  <a href="#liferef10k">REFIL LIFE 10K</a>
-  <a href="#liferef8k">REFIL LIFE 8K</a>
-  <a href="#vozoll">VOZOLL 20K POWER</a>
-  <a href="#losgal">LOSGAL</a>
-  <a href="#asparkkit">ASPARK KIT</a>
-</div>
 
   <section id="blacksheep20k">
   <h2>BLACK SHEEP 20K</h2>
@@ -186,19 +163,7 @@
   </ul>
 </section>
 
-<section id="chris">
-  <h2>🔥 CHRIS BROWN 15K</h2>
 
-  <img src="img/CHRIS-BROWN-15K.jpg" alt="IGNITE-V300-30k" style="display: block; margin: 0 auto; max-width: 100%; width: 250px; height: auto;">
-
-  <div style="text-align: center; margin-top: 20px;">
-    <button class="indisponivel">❌ Produto Indisponível</button>
-  </div>
-
-<!-- <ul class="sabores"> -->
- 
-  </ul>
-</section>
 
 <section id="iceking">
   <h2>ELFBAR ICE KING 40K</h2>
