--- a/index.html
+++ b/index.html
@@ -3,38 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <title>Catálogo - REI DO POD CAF</title>
+  
   <style>
+
     body {
-      background: radial-gradient(circle at top, #0f0f0f, #000);
-      color: #00ffcc;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-.topo {
-  background-color: #000;
-  padding: 30px 20px;
-  border-bottom: 3px solid #00ffcc;
+  background: radial-gradient(circle at top, #0f0f0f, #000); /* fundo com gradiente radial escuro */
+  color: #00ffcc; /* cor padrão do texto */
+  margin: 0;
+  padding: 0;
 }
+    /* cor do topo */
+
+   .topo {
+  background-color: #000000; /* fundo preto no topo */
+  padding: 40px 20px; /* espaçamento interno */
+  border-bottom: 3px solid #00ffcc; /* linha neon embaixo do topo */
+}
+
+ /* faz a foto dar uma espaco da letra */ 
 
 .topo-container {
-  display: flex;
+  display: flex; /* coloca logo e infos lado a lado */
   align-items: center;
   justify-content: center;
-  gap: 30px;
-  flex-wrap: wrap;
+  gap: 30px; /* espaço entre a logo e os textos */
+  flex-wrap: wrap; /* permite quebra em telas pequenas */
 }
 
+/* tamanho da foto da logo */ 
+
 .logo-topo {
-  width: 115px;
+  width: 115px; /* tamanho da logo */
   height: auto;
-  border-radius: 10px;
+  border-radius: 10px; /* bordas arredondadas */
 }
 
 .info-topo {
-  color: #00ffcc;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #00ffcc; /* cor dos textos */
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -50,7 +57,7 @@
 .info-topo p {
   margin: 0;
   font-size: 1em;
-  color: #ccc;
+  color: #cccccc; /* tom mais neutro para contatos */
 }
 
     .conteudo {
@@ -59,24 +66,25 @@
     }
 
     .conteudo img {
-      max-width: 300px;
-      width: 90%;
-      border-radius: 12px;
-      margin-bottom: 20px;
-      box-shadow: 0 0 20px #00ffcc55;
-    }
+  max-width: 300px;
+  width: 90%;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 20px #00ffcc55; /* sombra leve neon */
+}
 
 .botao {
       display: inline-block;
       padding: 15px 25px;
       background-color: #00ffcc;
-      color: #000;
+      color: #000000;
       font-weight: bold;
       border-radius: 10px;
       text-decoration: none;
       font-size: 18px;
       box-shadow: 0 0 10px #00ffcc;
       transition: transform 0.2s ease;
+     margin-bottom: 40px; /* afasta o botão do rodapé */
     }
 
   .produto-container {
@@ -85,37 +93,22 @@
   align-items: center;
   margin-top: 30px;
 }
+   
+    /* imagem pod */
 
 .produto-container img {
   max-width: 300px;
   width: 100%;
-  border-radius: 15px;
+  border-radius: 20px;
   box-shadow: 0 0 20px rgba(0, 255, 204, 0.2);
   margin-bottom: 20px;
 }
-
-  img {
-  border-radius: 12px;
-  box-shadow: 0 0 20px rgba(0,255,204,0.2);
-}
-
-    .rodape {
-      background-color: #001010;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.95em;
-    }
-
-    .rodape span {
-      display: block;
-      margin: 8px 0;
-    }
 
     .emoji {
       font-size: 1.2em;
       margin-right: 5px;
     }
+
     .contato {
   display: flex;
   flex-direction: column;
@@ -127,7 +120,7 @@
   display: flex;
   align-items: center;
   gap: 6px;
-  color: #ccc;
+  color: #cccccc;
   text-decoration: none;
   font-size: 1em;
   justify-content: center;
@@ -136,27 +129,15 @@
 .social img {
   width: 20px;
   height: 20px;
-  margin-bottom: -2px;
-}
-
-.botao {
-  display: inline-block;
-  padding: 15px 30px;
-  background-color: #00ffcc;
-  color: #000;
-  font-weight: bold;
-  border-radius: 10px;
-  text-decoration: none;
-  font-size: 18px;
-  box-shadow: 0 0 12px #00ffcc;
-  transition: transform 0.2s ease, background-color 0.2s ease;
-  margin-top: 20px;
+  margin-bottom: -2px; /* alinha verticalmente com o texto */
 }
 
 .botao:hover {
   transform: scale(1.05);
-  background-color: #00e6b8;
 }
+
+  /*Rei do Pod */
+
 .verde {
   color: #00ffcc;
   font-weight: bold;
@@ -165,14 +146,14 @@
 .rodape {
   background-color: #001010;
   padding: 25px 20px;
-  color: #ccc;
+  color: #cccccc;
   text-align: center;
   font-size: 1em;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  border-top: 2px solid #00ffcc22;
-  box-shadow: 0 -2px 10px rgba(0,255,204,0.1);
+  border-top: 2px solid #00ffcc22; /* linha neon discreta em cima */
+  box-shadow: 0 -2px 10px rgba(0,255,204,0.1); /* sombra pra cima */
 }
 
 .rodape .linha {
@@ -182,6 +163,31 @@
   gap: 8px;
 }
 
+body {
+      background: radial-gradient(circle at top, #0f0f0f, #000);
+      color: #00ffcc;
+      margin: 0;
+      padding: 0;
+    }
+    .topo {
+      background-color: #000;
+      padding: 40px 20px;
+      border-bottom: 3px solid #00ffcc;
+      text-align: center;
+    }
+    .link-dinamico {
+      display: inline-block;
+      margin-top: 12px;
+      padding: 10px 18px;
+      border: 1px solid #00ffcc;
+      border-radius: 12px;
+      text-decoration: none;
+      color: #00ffcc;
+    }
+    .link-dinamico:hover {
+      background: #00ffcc;
+      color: #000;
+    }
   </style>
 </head>
 <body>
@@ -198,7 +204,8 @@
   </div>
 </div>
 
-<!-- PRODUTO -->
+      <!-- PRODUTO -->
+
 <div class="produto-container">
   <img src="img/pod.ia.jpg" alt="Imagem do Produto">
   <a href="sabores-v50.html" class="botao">Ver Produtos</a>
