--- a/sabores-v50.html
+++ b/sabores-v50.html
@@ -22,6 +22,15 @@
   <h1 class="titulo-sabores">Clique no seu sabor favorito e receba rapidinho!</h1>
 
   <main>
+
+    <section id="v55">
+      <h2>IGNITE V55</h2>
+      <img class="produto-imagem" src="img/IGNITE V55.jpg" alt="Imagem do Pod Ignite V55">
+      <ul class="sabores" id="sabores-v55">
+        <li class="loading-msg">Carregando sabores...</li>
+      </ul>
+    </section>
+
     <section id="v80">
       <h2>IGNITE V80 BLACK</h2>
       <img class="produto-imagem" src="img/IGNITE-V80-BLACK.jpg" alt="Imagem do Pod descartável Ignite V80 Black">
@@ -195,6 +204,14 @@
       <h2>EQUATOR 30K</h2>
       <img class="produto-imagem" src="img/EQUATOR 30K.jpg" alt="Imagem do Pod equator">
       <ul class="sabores" id="sabores-equator">
+        <li class="loading-msg">Carregando sabores...</li>
+      </ul>
+    </section>
+
+    <section id="Instabar15k">
+      <h2>INSTA BAR 15K</h2>
+      <img class="produto-imagem" src="img/INSTA BAR 15K.jpg" alt="Imagem do Pod Instabar15k">
+      <ul class="sabores" id="sabores-instabar15k">
         <li class="loading-msg">Carregando sabores...</li>
       </ul>
     </section>
