--- a/sabores-v50.html
+++ b/sabores-v50.html
@@ -20,8 +20,16 @@
   <a href="index.html" class="voltar-btn">↩️ Voltar</a>
 
   <h1 class="titulo-sabores">Clique no seu sabor favorito e receba rapidinho!</h1>
-
+  
   <main>
+
+    <section id="instabar">
+      <h2>INSTA BAR 15K</h2>
+      <img class="produto-imagem" src="img/INSTA BAR 15K.jpg" alt="Imagem do produto">
+      <ul class="sabores" id="sabores-instabar">
+        <li class="loading-msg">Carregando sabores...</li>
+      </ul>
+    </section>
 
     <section id="v55">
       <h2>IGNITE V55</h2>
@@ -208,13 +216,6 @@
       </ul>
     </section>
 
-    <section id="Instabar15k">
-      <h2>INSTA BAR 15K</h2>
-      <img class="produto-imagem" src="img/INSTA BAR 15K.jpg" alt="Imagem do Pod Instabar15k">
-      <ul class="sabores" id="sabores-instabar15k">
-        <li class="loading-msg">Carregando sabores...</li>
-      </ul>
-    </section>
 
   </main>
 
