fix: corrigir caminho da imagem do produto FHUKA

--- a/sabores-v50.html
+++ b/sabores-v50.html
@@ -212,7 +212,7 @@
 
   <section id="fhukad10k">
     <h2>FHUKA D10K</h2>
-    <img class="produto-imagem" src="img/" alt="Imagem do produto">
+    <img class="produto-imagem" src="img/FHUKA D10K.jpeg" alt="Imagem do produto">
     <ul class="sabores" id="sabores-fhukad10k">
       <li class="loading-msg">Carregando sabores...</li>
     </ul>
