adicionei 2 pod's e tirei dois

--- a/sabores-v50.html
+++ b/sabores-v50.html
@@ -162,14 +162,6 @@
       </ul>
     </section>
 
-    <section id="losgal">
-      <h2>LOSGAL 25K</h2>
-      <img class="produto-imagem" src="img/LOSGAL 25K.jpg" alt="Imagem do Pod descartável Losgal 25k puffs">
-      <ul class="sabores" id="sabores-losgal">
-        <li class="loading-msg">Carregando sabores...</li>
-      </ul>
-    </section>
-  
   <section id="equator">
     <h2>EQUATOR 30K</h2>
     <img class="produto-imagem" src="img/EQUATOR 30K.jpg" alt="Imagem do Pod equator">
@@ -210,14 +202,22 @@
     </ul>
   </section>
 
-  <section id="fhukad10k">
-    <h2>FHUKA D10K</h2>
-    <img class="produto-imagem" src="img/FHUKA D10K.jpeg" alt="Imagem do produto">
-    <ul class="sabores" id="sabores-fhukad10k">
+  <section id="frosty10k">
+    <h2>FROSTY 10K</h2>
+    <img class="produto-imagem" src="img/Frosty_10k.jpeg" alt="Imagem do produto">
+    <ul class="sabores" id="sabores-frosty10k">
       <li class="loading-msg">Carregando sabores...</li>
     </ul>
   </section>
-  
+
+ <section id="icity12k">
+    <h2>ICITY 12K</h2>
+    <img class="produto-imagem" src="img/ICITY 12K.jpeg" alt="Imagem do produto">
+    <ul class="sabores" id="sabores-icity12k">
+      <li class="loading-msg">Carregando sabores...</li>
+    </ul>
+  </section>
+
 </main>
 
 <script src="script.js"></script>
