--- a/sabores-v50.html
+++ b/sabores-v50.html
@@ -314,7 +314,7 @@
   </div>
 
   <div class="relative group w-full mb-6">
-    <img src="img/IGNITE_V400.png.png" alt="Imagem do Pod descartável Ignite V400" class="w-full h-48 object-contain transition-transform duration-500 group-hover:scale-110">
+    <img src="img/IGNITE_V400ICE.png.png" alt="Imagem do Pod descartável Ignite V400" class="w-full h-48 object-contain transition-transform duration-500 group-hover:scale-110">
     <div class="absolute inset-0 bg-pink-600/15 blur-3xl -z-10 rounded-full opacity-0 group-hover:opacity-100 transition-opacity"></div>
   </div>
 
@@ -339,7 +339,7 @@
   </div>
 
   <div class="relative group w-full mb-6">
-    <img src="img/IGNITE_V400ICE.png.png" alt="Imagem do Pod descartável Ignite V400 Mix" class="w-full h-48 object-contain transition-transform duration-500 group-hover:scale-110">
+    <img src="img/IGNITE_V400.png.png" alt="Imagem do Pod descartável Ignite V400 Mix" class="w-full h-48 object-contain transition-transform duration-500 group-hover:scale-110">
     <div class="absolute inset-0 bg-orange-600/15 blur-3xl -z-10 rounded-full opacity-0 group-hover:opacity-100 transition-opacity"></div>
   </div>
 
@@ -464,7 +464,7 @@
   </div>
 
   <div class="relative group w-full mb-6">
-    <img src="img/REFIL-LIFE-POD.png.png" alt="Imagem do Life Pod 40k puffs" class="w-full h-48 object-contain transition-transform duration-500 group-hover:scale-110">
+    <img src="img/LIFE_POD_40.000_DESCARTÁVEL.png.png" alt="Imagem do Life Pod 40k puffs" class="w-full h-48 object-contain transition-transform duration-500 group-hover:scale-110">
     <div class="absolute inset-0 bg-teal-600/15 blur-3xl -z-10 rounded-full opacity-0 group-hover:opacity-100 transition-opacity"></div>
   </div>
 
